# TokenBar

./: Cargo.toml  Makefile  README.md  appcast.xml
.github/workflows/: release.yml
Sources/TokenBar/: AgentUsageStore.swift  AppDelegate.swift  BetaMigration.swift  DashboardModel.swift  DropdownPanelController.swift  Format.swift  GlassBackground.swift  PopoverView.swift  SelfTest.swift  SettingsWindowController.swift  StatusItemController.swift  TrayAnimator.swift  TrayMode.swift  main.swift
Sources/TokenBar/Views/: AgentIconView.swift  AgentLimitsCard.swift  Cards.swift  DashboardTabs.swift  HourlyView.swift  OverviewView.swift  SettingsPanel.swift  SettingsWindowView.swift  StatsView.swift  UsageChartCard.swift
Sources/TokenBarCore/: AgentUsage.swift  ClientRegistry.swift  DayBars.swift  HourlyReport.swift  QuotaResolver.swift  TBCore.swift  UsageStats.swift
crates/tb_core_ffi/src/: hourly_report.rs  usage_tail.rs
landing/og-src/: og.html  render.sh
landing/public/: llms.txt
landing/src/components/: Hero.astro
landing/src/layouts/: Base.astro
landing/src/styles/: global.css
scripts/: bundle.sh
